Add static factory methods and service creation utilities for aggregate CRUD components